userreviews/static/userreviews/css/style.css
body {
  color: #6f6f87;
  background-color: #f8f9fa;
  font-family: TrustpilotDefaultFont,Arial,sans-serif;
  font-size: 16px;
}
header {
  background-color: #ffffff;
}
.navbar {
  padding-left: 0rem;
}
.blog-header {
  line-height: 1;
  border-bottom: 1px solid #e5e5e5;
}
.navbar-logo {
  font-family: "Playfair Display", Georgia, "Times New Roman", serif/*rtl:Amiri, Georgia, "Times New Roman", serif*/;
  font-size: 2rem;
  color: #f3ad13;
  text-decoration: none;
}
a:hover {
  text-decoration: none;
  color: #fbb51ae8;
}
a {
  color: #1b1b21;
}
.nav-link {
  color: #f3ad13;
}
.input-form {
  background-color: #f8f9fa;
}
.btn-primary, .btn-primary:hover {
  color: #fff;
  background-color: #f3ad13;
  border-color: #f3ad13;
}
.login{
  margin: auto;
}
button.signup {
  width: 150px
}

div.signup{
  margin: auto;
}



.blog-header-logo {
  font-family: "Playfair Display", Georgia, "Times New Roman", serif/*rtl:Amiri, Georgia, "Times New Roman", serif*/;
  font-size: 2.25rem;
}

.blog-header-logo:hover {
  text-decoration: none;
}

h1, h2, h3, h4, h5, h6 {
  font-family: "Playfair Display", Georgia, "Times New Roman", serif/*rtl:Amiri, Georgia, "Times New Roman", serif*/;
}

.display-4 {
  font-size: 2.5rem;
}
@media (min-width: 768px) {
  .display-4 {
    font-size: 3rem;
  }
}

.nav-scroller {
  position: relative;
  z-index: 2;
  height: 2.75rem;
  overflow-y: hidden;
}

.nav-scroller .nav {
  display: flex;
  flex-wrap: nowrap;
  padding-bottom: 1rem;
  margin-top: -1px;
  overflow-x: auto;
  text-align: center;
  white-space: nowrap;
  -webkit-overflow-scrolling: touch;
}

.nav-scroller .nav-link {
  padding-top: .75rem;
  padding-bottom: .75rem;
  font-size: .875rem;
}

.card-img-right {
  height: 100%;
  border-radius: 0 3px 3px 0;
}

.flex-auto {
  flex: 0 0 auto;
}

.h-250 { height: 250px; }
@media (min-width: 768px) {
  .h-md-250 { height: 250px; }
}

/* Pagination */
.blog-pagination {
  margin-bottom: 4rem;
}
.blog-pagination > .btn {
  border-radius: 2rem;
}

/*
 * Blog posts
 */
.blog-post {
  margin-bottom: 4rem;
}
.blog-post-title {
  margin-bottom: .25rem;
  font-size: 2.5rem;
}
.blog-post-meta {
  margin-bottom: 1.25rem;
  color: #727272;
}

/*
 * Footer
 */
.blog-footer {
  padding: 2.5rem 0;
  color: #727272;
  text-align: center;
  background-color: #f9f9f9;
  border-top: .05rem solid #e5e5e5;
}
.blog-footer p:last-child {
  margin-bottom: 0;
}
/*****/
.category-header {
	background-color: #f3f3f3;
	padding: 0.5rem;
}

.info {
  color: #0c5460;
  background-color: #d1ecf1;
  border-color: #bee5eb;
  position: relative;
  padding: .75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: .25rem;
}
.errorlist {
  color: red;
  list-style-type: none;
  padding-left: 0
}
.inline {
  display: inline;
}
.category-card {
  padding: 20px;
  background-color: #f8f9fa;
  text-align: center;
  font-weight: 700;
}
.category-section {
  background-color: #dcdce6;
}
.category-card-container {
  margin-bottom: 20px;
}

.header-title {
  padding-bottom: 20px;
  margin-left: 1rem;
}

.form-title {
  text-align: center;
}
.centered-box {
    background-color: #ffffff;
    padding: 20px;
    width: 510px;
    max-width: 100%;
    margin: 20px auto;
}

textarea, div>select, input{
    display: block;
    width: 100%;
    padding: .375rem .75rem;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    color: #495057;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid #ced4da;
    border-radius: .25rem;
    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.submit-btn {
  color: #fff;
  background-color: #f3ad13;
  display: block;
  width: 100%;
  height: calc(1.5em + .75rem + 2px);
  padding: .375rem .75rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  background-clip: padding-box;
  border: 0px;
  border-radius: .25rem;
  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.btn-primary{
  margin-top: 20px;
}
.comment-label {
  margin-top: 20px;
}

#id_comment{
  display: block;
}

p>label{
  font-weight: 700;
}
.gl-star-rating[data-star-rating] { 
  display: block !important;
  margin-bottom: 20px
}
#sign-up li, .helptext{
  font-size: smaller;
}
.item-box{
  background-color: #ffffff;
  border-radius: .25em;
  max-width: 900px;
  margin: auto;
  margin-bottom: 20px;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 20px;
  padding-bottom: 10px;
}
.review-count {
  font-size: small;
}
.msg{
  font-weight: 700;
}
.title-box{
  max-width: 900px;
  margin: auto;
}

.logo-box{
  padding-bottom: 25px;
  margin-top: auto;
  margin-bottom: auto;
}
.company-logo {
 max-width: 150px;
}
.navbar-container{
  max-width: 960px;
}

